--- a/dev_routes.yaml
+++ b/dev_routes.yaml
@@ -5,16 +5,19 @@ items:
   metadata:
     annotations:
       description: Route for application's http service.
+      kubectl.kubernetes.io/last-applied-configuration: |
+        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"description":"Route for application's http service.","openshift.io/host.generated":"true"},"creationTimestamp":"2019-11-19T21:29:38Z","labels":{"app.kubernetes.io/instance":"promoting-manifests","application":"openjdk-app","template":"openjdk18-web-basic-s2i","template.openshift.io/template-instance-owner":"b0f0772c-0b13-11ea-bafe-122670964aa1","xpaas":"1.4.14"},"name":"openjdk-app","namespace":"dev","resourceVersion":"38665","selfLink":"/apis/route.openshift.io/v1/namespaces/dev/routes/openjdk-app","uid":"b0f3d8db-0b13-11ea-bafe-122670964aa1"},"spec":{"host":"openjdk-app-dev.apps.nyc-e57b.open.redhat.com","to":{"kind":"Service","name":"openjdk-app","weight":100},"wildcardPolicy":"None"},"status":{"ingress":[{"conditions":[{"lastTransitionTime":"2019-11-19T21:29:38Z","status":"True","type":"Admitted"}],"host":"openjdk-app-dev.apps.nyc-e57b.open.redhat.com","routerName":"router","wildcardPolicy":"None"}]}}
       openshift.io/host.generated: "true"
     creationTimestamp: 2019-11-19T21:29:38Z
     labels:
+      app.kubernetes.io/instance: promoting-manifests
       application: openjdk-app
       template: openjdk18-web-basic-s2i
       template.openshift.io/template-instance-owner: b0f0772c-0b13-11ea-bafe-122670964aa1
       xpaas: 1.4.14
     name: openjdk-app
     namespace: dev
-    resourceVersion: "38665"
+    resourceVersion: "93325"
     selfLink: /apis/route.openshift.io/v1/namespaces/dev/routes/openjdk-app
     uid: b0f3d8db-0b13-11ea-bafe-122670964aa1
   spec:
